# scope_interview

./: .dockerignore  .env  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  main.py  pyproject.toml  sample_outputs.md
data/: corporates_B_3.xlsm
data/debug/: corporates_A_1_kv.xlsx  corporates_A_1_ts.xlsx
src/: config.py
src/api/: app.py  dependencies.py  schemas.py
src/api/routes/: companies.py  leases.py  pipeline.py  properties.py  quality.py  snapshots.py  tenants.py  uploads.py
src/api/schemas/: responses.py
src/common/: hashing.py
src/db/: init_db.py  schemas.py  session.py
src/db/models/: base.py  bronze_layer.py  pipeline_state.py  raw.py  raw_layer.py  schemas.py  tables.py  warehouse.py  warehouse_layer.py
src/pipeline/: data_layers.py  extract.py  extract_file_metadata.py  load_raw.py  orchestrator.py  process_sheet.py  scheduler.py  source_dtypes.py  src_dtypes.py  transform.py  validate.py
tests/: conftest.py  test_api.py  test_extract.py  test_extract_file_metadata.py  test_pipeline.py  test_process_sheet.py  test_src_dtypes.py  test_transform.py  test_transformer_integration.py  test_validate.py
the_original_task/: AI_USAGE.md
