[project]
name = "excelsior"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]>=0.135.1",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pandas[excel]>=2.3.3",
    "pandas-stubs>=2.3.3.260113",
    "pytest>=8.0",
]
